@@ -1,0 +1,9 @@
+from os import *
+
+
+class Foo:
+    def __init__(self):
+        pass
+
+    def bar(self):
+        pass
