@@ -1,0 +1,6 @@
+
+.. autosummary::
+   :toctree: generated
+
+   autodoc_dummy_module
+   autodoc_dummy_module.Foo
